Code to generate images of each disease type in ChexNet

--- a/run.ipynb
+++ b/run.ipynb
@@ -11,6 +11,7 @@
     "from PIL import Image\n",
     "from torchvision import transforms\n",
     "from torchvision.utils import save_image\n",
+    "from tqdm import tqdm\n",
     "from diffusers import StableDiffusionPipeline\n"
    ]
   },
@@ -48,11 +49,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: Run stable diffusion image generation\n",
-    "prompts = [\"big right-sided pleural effusion\", \"colorful sunset\", \"abstract art\"]\n",
+    "# Step 5: Enable progressive loading (for JPEG)\n",
+    "image_options = {'progressive': True} if file_format == 'JPEG' else {}\n",
     "\n",
-    "output = pipe(prompts, num_inference_steps=75, height=512, width=512, guidance_scale=4)\n",
-    "generated_images = output.images"
+    "def save_images(generated_images, disease_type): \n",
+    "    # Step 6: Save the images\n",
+    "    for i, generated_image in enumerate(tqdm(generated_images)):\n",
+    "\n",
+    "        # Save the image\n",
+    "        image_name = f'{disease_type}_{i}.{file_format.lower()}'\n",
+    "        output_path = os.path.join(output_dir, image_name)\n",
+    "        generated_image.save(output_path, format=file_format, optimize=True, quality=compression_level, **image_options)"
    ]
   },
   {
@@ -61,20 +68,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Enable progressive loading (for JPEG)\n",
-    "image_options = {'progressive': True} if file_format == 'JPEG' else {}\n",
+    "# Step 4: Run stable diffusion image generation\n",
+    "def generate_dataset_prompt(disease_type, num_data = 50):\n",
+    "    prompts = [disease_type] * num_data\n",
+    "    return prompts\n",
     "\n",
-    "# Step 6: Save the images\n",
-    "for i, generated_image in enumerate(generated_images):\n",
+    "diseases = [ 'Atelectasis', 'Cardiomegaly', 'Effusion', 'Infiltration', 'Mass', 'Nodule', 'Pneumonia',\n",
+    "                'Pneumothorax', 'Consolidation', 'Edema', 'Emphysema', 'Fibrosis', 'Pleural_Thickening', 'Hernia']\n",
     "\n",
-    "    # Save the image\n",
-    "    image_name = f'image_{i}.{file_format.lower()}'\n",
-    "    output_path = os.path.join(output_dir, image_name)\n",
-    "    generated_image.save(output_path, format=file_format, optimize=True, quality=compression_level, **image_options)\n",
-    "\n",
-    "    # Optionally display progress or other post-processing steps\n",
-    "\n",
-    "print(\"Image generation and saving completed!\")"
+    "print(\"Start inference loop\")\n",
+    "for disease in diseases: \n",
+    "    prompts =  generate_dataset_prompt(disease, num_data = 1)\n",
+    "    output = pipe(prompts, num_inference_steps=75, height=512, width=512, guidance_scale=4)\n",
+    "    generated_images = output.images\n",
+    "    save_images(generated_images=generated_images, disease_type=disease)"
    ]
   }
  ],
